# CareerAssist

./: .env.example  .gitignore  .pre-commit-config.yaml  HOW_TO_HIDE_THIS_PR.md  Makefile  README.md  commit_log.txt  gameplan.md
backend/: check_db.py  check_job_details.py  debug_boto3.py  deploy_all_lambdas.py  package_docker.py  populate_sample_data.py  pyproject.toml  run_all_migrations.py  run_migration.py  test_full.py  test_simple.py  watch_agents.py
backend/analyzer/: agent.py  judge.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/api/: __init__.py  lambda_handler.py  main.py  package_docker.py  pdf_extractor.py  pyproject.toml
backend/charter/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/database/: run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/extractor/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/ingest/: cleanup_s3vectors.py  ingest_s3vectors.py  package.py  search_s3vectors.py  seed_knowledge_base.py  test_ingest_s3vectors.py  test_search_s3vectors.py
backend/interviewer/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  requirements.txt  templates.py  test_full.py  test_simple.py  trigger_test.py
backend/orchestrator/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_simple.py
(+82 files in other folders)
